# wekan-scanner-20260115T1506

./: .gitignore  README.md  pyproject.toml  test_auth.py
.logfire/: logfire_credentials.json
scanner/: __init__.py  cli.py  client.py  models.py  registry.py  utils.py
scanner/api/: __init__.py  authentication.py  boards.py  card_comments.py  cards.py  checklists.py  custom_fields.py  lists.py
