[project]
name = "wekan-scanner"
version = "0.1.0"
description = "API utilizer/scanner for wekan"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.12.0",
    "logfire>=4.16.0",
    "defopt>=6.4.0",
]

[project.scripts]
wekan-scanner = "scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[tool.pyright]
include = ["scanner"]
exclude = ["**/__pycache__", "**/.*"]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = false
